--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.table th, .table td {
+  vertical-align: middle;
+}
+.table .fw-bold {
+  background-color: #e9ecef;
+}
